--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 09:15+0300\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Mc web <info@mcwebmanagement.com>\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -1266,8 +1266,8 @@ msgstr ""
 #: ../code/application/views/includes/template-share-email-popup.php:44
 msgid "Mail this PDF quote to someone you know, or send it to yourself."
 msgstr ""
-"Envoyer ce devis PDF à quelqu'un que vous connaissez ou à vous-même pour "
-"vous en rappeler."
+"Envoyez par email ce devis PDF à quelqu'un que vous connaissez ou à vous-"
+"même."
 
 #: ../code/application/views/includes/template-share-email-popup.php:47
 #: ../code/application/views/helpfile/pofields.php:676
@@ -1305,8 +1305,8 @@ msgid ""
 "Yes, I want to subscribe to the newsletter to get great deals. (You can "
 "unsubscribe anytime)"
 msgstr ""
-"Oui, je souhaite m'abonner à la newsletter pour revoir les promos. (vous "
-"pouvez vous désinscrire à n'importe quel moment et quel qu'en soit le motif)"
+"Oui, je souhaite m'abonner à la newsletter pour recevoir les meuilleurs "
+"promos. (Vous pouvez vous désabonner à tout moment)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:83
 #: ../code/application/views/helpfile/pofields.php:682
@@ -4131,7 +4131,7 @@ msgstr "Filtrer par Quartiers"
 
 #: ../code/application/views/city_view.php:20
 msgid "Filter by Landmarks (within 2km)"
-msgstr "Fltrer par attractions (- de 2Kms)"
+msgstr "Filtrer par attraction (- 2kms)"
 
 #: ../code/application/views/city_view.php:81
 #: ../code/application/views/helpfile/pofields.php:440
@@ -4251,7 +4251,7 @@ msgstr "Filtrer par attractions"
 
 #: ../code/application/views/city_view.php:261
 msgid "Filter by Districts or Landmarks"
-msgstr "Filtrer par quartiers ou attractions"
+msgstr "Filtrer par districts ou attractions"
 
 #: ../code/application/views/city_view.php:290
 #: ../code/application/views/helpfile/pofields.php:649
@@ -4528,7 +4528,7 @@ msgstr ""
 #: ../code/application/views/hb/booking_avail_view.php:289
 #, php-format
 msgid "Dorm Availability"
-msgstr "Disponibilité des dortoirs"
+msgstr "Disponibilité dortoir"
 
 #: ../code/application/views/hw/booking_avail_view.php:231
 #: ../code/application/views/hb/booking_avail_view.php:289
@@ -4694,7 +4694,7 @@ msgstr ""
 #: ../code/application/views/hw/booking_avail_view.php:749
 #: ../code/application/views/hb/booking_avail_view.php:719
 msgid "Number of guests selected"
-msgstr "Nombre total de personnes sélectionnés"
+msgstr "Nombre de clients sélectionnés"
 
 #: ../code/application/views/hw/booking_avail_view.php:769
 #: ../code/application/views/hb/booking_avail_view.php:737
@@ -8583,7 +8583,7 @@ msgid "The deposit is non refundable and non transferable."
 msgstr "Le dépôt est non remboursable et non transférable."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property's "
@@ -8684,7 +8684,7 @@ msgid "Add to my favorites"
 msgstr "Ajouter à mes favoris"
 
 #: ../code/application/views/helpfile/pofields.php:816
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You can save this property as a favorite in your account so you can easily "
 "book it at a later date if you wish."
@@ -8696,7 +8696,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:817
 #, php-format
 msgid "Account created"
-msgstr ""
+msgstr "Compte créé"
 
 #: ../code/application/views/helpfile/pofields.php:818
 #, php-format
@@ -8728,12 +8728,12 @@ msgid "Saved favorite properties"
 msgstr "Mes établissements favoris"
 
 #: ../code/application/views/helpfile/pofields.php:822
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit to be paid now (%d)"
 msgstr "Dépôt à payer maintenant (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:823
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d) is payable upon arrival. You will "
@@ -8743,11 +8743,11 @@ msgstr ""
 "Vous ne payez que le dépôt (%d du montant total) pour confirmer et garantir "
 "votre réservation maintenant. Le montant restant (%d) est payable à "
 "l'arrivée. Vous trouverez les coordonnées de létablissment (email, adresse, "
-"numéro de téléphone ...) dans votre email de confirmation après avoir "
-"effectué votre réservation."
+"numéro de téléphone …) dans votre email de confirmation après avoir effectué "
+"votre réservation."
 
 #: ../code/application/views/helpfile/pofields.php:824
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit (%d)"
 msgstr "Dépôt (%d)"
 
