--- a/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 09:15+0300\n"
-"PO-Revision-Date: 2013-04-25 23:26+0200\n"
+"PO-Revision-Date: 2013-04-27 01:04+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3213,14 +3212,14 @@ msgid "1 guest in 1 Bedroom."
 msgstr "1 vieras 1 Makuhuoneessa."
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guests in each room)."
-msgstr "%d vierasta %d Makuhuoneessa ( %d vierasta per huone)."
+msgstr "1 vierasta %d Makuhuoneessa ( %d vierasta per huone)."
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guest in each room)."
-msgstr "%d vierasta %d Makuhuoneessa ( %d vierasta per huone)."
+msgstr "1 vierasta %d Makuhuoneessa ( %d vierasta per huone)."
 
 #: ../code/application/views/property_rooms_avail.php:415
 #: ../code/application/views/hw/booking_avail_view.php:526
@@ -3246,9 +3245,9 @@ msgstr "%d vierasta %d Makuhuoneessa ( %d vierasta per huone)."
 #: ../code/application/views/property_rooms_avail.php:417
 #: ../code/application/views/hw/booking_avail_view.php:528
 #: ../code/application/views/hb/booking_avail_view.php:571
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (%d guest in each room)."
-msgstr "%d vierasta %d Makuhuoneessa ( %d vierasta per huone)."
+msgstr "%d vierasta %d Makuhuoneessa (%d vierasta per huone)."
 
 #: ../code/application/views/property_rooms_avail.php:451
 #: ../code/application/views/hw/booking_avail_view.php:494
@@ -4552,7 +4551,7 @@ msgid "Bedrooms you will occupy:"
 msgstr "Makuhuoneet jota varaat:"
 
 #: ../code/application/views/hw/booking_avail_view.php:526
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedroom (1 guest in each room)."
 msgstr "%d vierasta %d Makuhuoneessa ( 1 vieras per huone)."
 
@@ -4568,7 +4567,7 @@ msgstr ""
 
 #: ../code/application/views/hw/booking_avail_view.php:591
 #: ../code/application/views/hb/booking_avail_view.php:518
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (1 guest in each room)."
 msgstr "%d vierasta %d Makuhuoneessa ( 1 vieras per huone)."
 
@@ -8407,17 +8406,16 @@ msgid "The deposit is non refundable and non transferable."
 msgstr "Käsirahaa ei ole mahdollista palauttaa tai siirtää."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property's "
 "contact information (email, address, telephone number…) in your confirmation "
 "email after you have made your reservation."
 msgstr ""
-"Maksat vain takuumaksun (10%% kokonaishinnasta) vahvistaaksesi varauksesi "
-"toistaiseksi. Loput laskusta (90%%) on maksettava saapumisen yhteydessä. "
-"Majoituspaikan tiedot (sähköpostiosoite, osoite, puhelinnumero …) näkyvät "
-"vahvistussähköpostissa kun olet tehnyt varauksesi."
+"Maksat käsirahan vahvistakseen varauksen. Toinen puoli maksusta maksat "
+"paikanpäällä. Löydät majoituksen yhteistiedot (sähköposti,osoite,"
+"puhelinnumero…) vahvistus sähköpostilla, varauksen tehtyä."
 
 #: ../code/application/views/helpfile/pofields.php:800
 #, php-format
@@ -8425,82 +8423,84 @@ msgid ""
 "By clicking \"Create Account\" you confirm that you accept the Terms of "
 "Service and Privacy Policy."
 msgstr ""
+"Painaamalla \"Luo Tili\" varmistat sen että hyväksyt Käyttöehdot ja Yksityis "
+"suojan."
 
 #: ../code/application/views/helpfile/pofields.php:801
-#, fuzzy, php-format
+#, php-format
 msgid "Create account"
-msgstr "Myöhäinen uloskirjautuminen"
+msgstr "Luo tili"
 
 #: ../code/application/views/helpfile/pofields.php:802
 #, php-format
 msgid "Tell me about great deals and exclusive discounts!"
-msgstr ""
+msgstr "Kerro mahtavista tarjouksista ja erikois alennuksista!"
 
 #: ../code/application/views/helpfile/pofields.php:803
-#, fuzzy, php-format
+#, php-format
 msgid "Save this property as a favorite"
-msgstr "Arvostele tämä kohde"
+msgstr "Tallenna tämä majoitus suosikkina"
 
 #: ../code/application/views/helpfile/pofields.php:804
 #, php-format
 msgid ""
 "We will never sell your personal information - You can unsubscribe anytime."
-msgstr ""
+msgstr "Emme ikinä myy sinun yksityis tietoja - Voit aina lopettaa tilisi."
 
 #: ../code/application/views/helpfile/pofields.php:805
 #, php-format
 msgid "Your private notes (optional)"
-msgstr ""
+msgstr "Sinun yksityis muistiinpanot (valinnainen)"
 
 #: ../code/application/views/helpfile/pofields.php:806
 #, php-format
 msgid "Characters left:"
-msgstr ""
+msgstr "Merkkiä jäljellä:"
 
 #: ../code/application/views/helpfile/pofields.php:807
-#, fuzzy, php-format
+#, php-format
 msgid "Update Notes"
-msgstr "Tärkeää"
+msgstr "Päivitä Muistiinpanot"
 
 #: ../code/application/views/helpfile/pofields.php:808
-#, fuzzy, php-format
+#, php-format
 msgid "Remove from my favorites"
-msgstr "Poista listalta tämä etsintäsana"
+msgstr "Poista suosikeista"
 
 #: ../code/application/views/helpfile/pofields.php:809
 #, php-format
 msgid "Cancel"
-msgstr ""
+msgstr "Peruuta"
 
 #: ../code/application/views/helpfile/pofields.php:810
 #, php-format
 msgid "My favorite properties"
-msgstr ""
+msgstr "Minun suosikki majoitukset"
 
 #: ../code/application/views/helpfile/pofields.php:811
 #, php-format
 msgid "List of favorite properties"
-msgstr ""
+msgstr "Suosikki majoitusten lista"
 
 #: ../code/application/views/helpfile/pofields.php:812
 #, php-format
 msgid "My short notes about the property"
-msgstr ""
+msgstr "Minun lyhkäiset muistiinpanot majoituksesta"
 
 #: ../code/application/views/helpfile/pofields.php:813
-#, fuzzy, php-format
+#, php-format
 msgid "Edit or remove"
-msgstr "poista"
+msgstr "Lisää tai poista"
 
 #: ../code/application/views/helpfile/pofields.php:814
-#, fuzzy, php-format
+#, php-format
 msgid "Saved to my favorites"
-msgstr "Tarkastele suosikkeja"
+msgstr "Tallennettu suosikkeihini"
 
 #: ../code/application/views/helpfile/pofields.php:815
-#, fuzzy, php-format
+#, php-format
 msgid "Add to my favorites"
-msgstr "Lisää suosikki"
+msgstr "Lisää suosikkeihin"
 
 #: ../code/application/views/helpfile/pofields.php:816
 #, php-format
@@ -8508,16 +8508,20 @@ msgid ""
 "You can save this property as a favorite in your account so you can easily "
 "book it at a later date if you wish."
 msgstr ""
+"Voit tallentaa tämän majoituksen tilillesi suosikki listaan  niin myöhemmin "
+"saat sen helpommin varattua."
 
 #: ../code/application/views/helpfile/pofields.php:817
 #, php-format
 msgid "Account created"
-msgstr ""
+msgstr "Tili luotu"
 
 #: ../code/application/views/helpfile/pofields.php:818
 #, php-format
 msgid "To save a property as a favorite, you must be login to your account."
 msgstr ""
+"Jos haluat tallentaa majoitukset suosikki listaan, sinun täytyy olla sisään "
+"kirjautunut."
 
 #: ../code/application/views/helpfile/pofields.php:819
 #, php-format
@@ -8525,21 +8529,24 @@ msgid ""
 "By creating an account you will be able to save properties as favorites, get "
 "access to your bookings and ratings, and many more benefits."
 msgstr ""
+"Luotuaan tilin pystyt tallentamaan majoituksia suosikki listaan, pääset "
+"näkemään varaukset, arviot ja paljon muuta hyödyllistä"
 
 #: ../code/application/views/helpfile/pofields.php:820
 #, php-format
 msgid "Please enter your email address and we will send you a password."
 msgstr ""
+"Ole hyvä ja merkitse sähköposti osoitteesi niin lähetämme sinulle salasanan."
 
 #: ../code/application/views/helpfile/pofields.php:821
-#, fuzzy, php-format
+#, php-format
 msgid "Saved favorite properties"
-msgstr "Etsi lisää kiinteistöjä kohteessa %s"
+msgstr "Suosikki majoitukset tallennettu"
 
 #: ../code/application/views/helpfile/pofields.php:822
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit to be paid now (%d)"
-msgstr "Käsiraha joka pitää maksaa nyt:"
+msgstr "Nyt maksettava käsiraha (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:823
 #, fuzzy, php-format
@@ -8555,24 +8562,24 @@ msgstr ""
 "vahvistussähköpostissa kun olet tehnyt varauksesi."
 
 #: ../code/application/views/helpfile/pofields.php:824
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit (%d)"
-msgstr "Käsiraha:"
+msgstr "Käsiraha (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:825
-#, fuzzy, php-format
+#, php-format
 msgid "Amount already paid:"
-msgstr "Käsiraha jo maksettu:"
+msgstr "Summa jo maksettu:"
 
 #: ../code/application/views/helpfile/pofields.php:826
 #, php-format
 msgid "The most popular"
-msgstr ""
+msgstr "Suosituin"
 
 #: ../code/application/views/helpfile/pofields.php:827
-#, fuzzy, php-format
+#, php-format
 msgid "Most popular"
-msgstr "Tärkeää"
+msgstr "Suosituimmat"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
