--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 09:15+0300\n"
-"PO-Revision-Date: 2013-04-26 00:04+0200\n"
+"PO-Revision-Date: 2013-04-26 22:28+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1242,11 +1241,8 @@ msgstr ""
 "요."
 
 #: ../code/application/views/includes/template-share-email-popup.php:44
-#, fuzzy
 msgid "Mail this PDF quote to someone you know, or send it to yourself."
-msgstr ""
-"이 페이지를 당신의 친구에게 메일로 보내세요. 또는 알림용으로 본인에게 보내세"
-"요."
+msgstr "귀하의 지인에게 또는 본인에게 PDF 견적을 메일로 보내기"
 
 #: ../code/application/views/includes/template-share-email-popup.php:47
 #: ../code/application/views/helpfile/pofields.php:676
@@ -1280,11 +1276,12 @@ msgid "From (email)"
 msgstr "발신자(이메일)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:73
-#, fuzzy
 msgid ""
 "Yes, I want to subscribe to the newsletter to get great deals. (You can "
 "unsubscribe anytime)"
-msgstr "예, 뉴스레터를 받고 싶습니다."
+msgstr ""
+"네, 좋은 거래 정보를 얻을 수 있는 뉴스 레터를 구독하겠습니다. (당신은 언제든"
+"지 구독을 취소하실 수 있습니다)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:83
 #: ../code/application/views/helpfile/pofields.php:682
@@ -3102,7 +3099,6 @@ msgstr "가능성"
 #: ../code/application/views/property_rooms_avail.php:279
 #: ../code/application/views/hw/booking_avail_view.php:283
 #: ../code/application/views/hb/booking_avail_view.php:285
-#, fuzzy
 msgid "Dorm"
 msgstr "기숙사"
 
@@ -3193,14 +3189,14 @@ msgid "1 guest in 1 Bedroom."
 msgstr "1명의 손님이 1 베드룸"
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guests in each room)."
-msgstr "%d명의 손님이 %d개의 베드룸 ( %d명의 손님 각 룸당)"
+msgstr "1명의 손님이 %d개의 베드룸 ( %d명의 손님 각 룸당)"
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guest in each room)."
-msgstr "%d명의 손님이 %d개의 베드룸 ( %d명의 손님 각 룸당)"
+msgstr "1명의 손님이 %d개의 베드룸 ( %d명의 손님 각 룸당)"
 
 #: ../code/application/views/property_rooms_avail.php:415
 #: ../code/application/views/hw/booking_avail_view.php:526
@@ -3226,7 +3222,7 @@ msgstr "%d명의 손님이 %d개의 베드룸 ( %d명의 손님 각 룸당)"
 #: ../code/application/views/property_rooms_avail.php:417
 #: ../code/application/views/hw/booking_avail_view.php:528
 #: ../code/application/views/hb/booking_avail_view.php:571
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (%d guest in each room)."
 msgstr "%d명의 손님이 %d개의 베드룸 ( %d명의 손님 각 룸당)"
 
@@ -4044,14 +4040,12 @@ msgstr "모든 국가 옵션으로 돌아가기 "
 
 #: ../code/application/views/city_view.php:12
 #: ../code/application/views/city_view.php:253
-#, fuzzy
 msgid "Filter by Districts"
 msgstr "지역으로 필터 하기"
 
 #: ../code/application/views/city_view.php:20
-#, fuzzy
 msgid "Filter by Landmarks (within 2km)"
-msgstr "랜드마크(2km 이내)"
+msgstr "랜드마크(2km 이내)로 조회"
 
 #: ../code/application/views/city_view.php:81
 #: ../code/application/views/helpfile/pofields.php:440
@@ -4166,14 +4160,12 @@ msgid "Close Map"
 msgstr "지도 닫기"
 
 #: ../code/application/views/city_view.php:257
-#, fuzzy
 msgid "Filter by Landmarks"
-msgstr "랜드 마크 (- 2kms)로 필터 하기"
+msgstr "랜드마크를 기준으로 조회"
 
 #: ../code/application/views/city_view.php:261
-#, fuzzy
 msgid "Filter by Districts or Landmarks"
-msgstr "지역으로 필터 하기"
+msgstr "지역 또는 랜드 마크를 기준으로 조회"
 
 #: ../code/application/views/city_view.php:290
 #: ../code/application/views/helpfile/pofields.php:649
@@ -4443,9 +4435,9 @@ msgstr ""
 #: ../code/application/views/hw/booking_avail_view.php:231
 #: ../code/application/views/hw/booking_avail_view.php:502
 #: ../code/application/views/hb/booking_avail_view.php:289
-#, fuzzy, php-format
+#, php-format
 msgid "Dorm Availability"
-msgstr "가능성"
+msgstr "기숙사 예약 가능"
 
 #: ../code/application/views/hw/booking_avail_view.php:231
 #: ../code/application/views/hb/booking_avail_view.php:289
@@ -4526,7 +4518,7 @@ msgid "Bedrooms you will occupy:"
 msgstr "당신이 빌릴 베드룸"
 
 #: ../code/application/views/hw/booking_avail_view.php:526
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedroom (1 guest in each room)."
 msgstr "%d명의 손님이 %d개의 베드룸 ( 1명의 손님 각 룸당)"
 
@@ -4540,7 +4532,7 @@ msgstr "이 호텔의 개인 전용룸 중 가장 저렴당 인당 숙박비: %s
 
 #: ../code/application/views/hw/booking_avail_view.php:591
 #: ../code/application/views/hb/booking_avail_view.php:518
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (1 guest in each room)."
 msgstr "%d명의 손님이 %d개의 베드룸 ( 1명의 손님 각 룸당)"
 
@@ -4604,9 +4596,8 @@ msgstr ""
 
 #: ../code/application/views/hw/booking_avail_view.php:749
 #: ../code/application/views/hb/booking_avail_view.php:719
-#, fuzzy
 msgid "Number of guests selected"
-msgstr "선택한 손님의 총 수"
+msgstr "선택한 손님 수"
 
 #: ../code/application/views/hw/booking_avail_view.php:769
 #: ../code/application/views/hb/booking_avail_view.php:737
@@ -8355,17 +8346,16 @@ msgid "The deposit is non refundable and non transferable."
 msgstr "보증금은 환불 및 양도될 수 없습니다."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property's "
 "contact information (email, address, telephone number…) in your confirmation "
 "email after you have made your reservation."
 msgstr ""
-" 고객님의 예약승인을 위해 디파짓(총 금액의 10%%)을 결제 해주셔야 합니다. 남"
-"은 금액(90%%)는 도착후에 결제 가능하십니다. 고객님의 예약승인이 완료된후 보내"
-"드리는 확인 메일에서 숙소 정보(이메일, 주소, 전화번호 등..)을 확인 하실 수 있"
-"습니다. "
+"당신은 지금 예약을 확인하고 확보하기 위한 보증금을 지불해야합니다. 나머지 금"
+"액은 도착 시 지불하십시오. 당신은 예약한 후에, 확인 메일에서 호텔의 연락처 정"
+"보 (이메일, 주소, 전화 번호, ...)를 찾을 수 있습니다."
 
 #: ../code/application/views/helpfile/pofields.php:800
 #, php-format
@@ -8384,7 +8374,7 @@ msgstr "계정 만들기"
 #: ../code/application/views/helpfile/pofields.php:802
 #, php-format
 msgid "Tell me about great deals and exclusive discounts!"
-msgstr ""
+msgstr "최고의 거래와 특별한 할인 정보를 알려주세요!"
 
 #: ../code/application/views/helpfile/pofields.php:803
 #, php-format
@@ -8437,22 +8427,22 @@ msgstr "마음에 드는 호텔 목록"
 #: ../code/application/views/helpfile/pofields.php:812
 #, php-format
 msgid "My short notes about the property"
-msgstr ""
+msgstr "호텔에 대한 나의 짧은 기록"
 
 #: ../code/application/views/helpfile/pofields.php:813
-#, fuzzy, php-format
+#, php-format
 msgid "Edit or remove"
-msgstr "삭제"
+msgstr "편집 또는 삭제"
 
 #: ../code/application/views/helpfile/pofields.php:814
-#, fuzzy, php-format
+#, php-format
 msgid "Saved to my favorites"
-msgstr "즐겨 찾기 보기"
+msgstr "즐겨 찾기에 저장"
 
 #: ../code/application/views/helpfile/pofields.php:815
-#, fuzzy, php-format
+#, php-format
 msgid "Add to my favorites"
-msgstr "즐겨 찾기에 추가하기"
+msgstr "내 즐겨 찾기에 추가"
 
 #: ../code/application/views/helpfile/pofields.php:816
 #, php-format
@@ -8460,16 +8450,18 @@ msgid ""
 "You can save this property as a favorite in your account so you can easily "
 "book it at a later date if you wish."
 msgstr ""
+" 이 호텔을 귀하의 계정에 즐겨 찾기로 저장하여, 원하는 때에 손쉽게 예약을 할 "
+"수 있습니다."
 
 #: ../code/application/views/helpfile/pofields.php:817
 #, php-format
 msgid "Account created"
-msgstr ""
+msgstr "계정 생성"
 
 #: ../code/application/views/helpfile/pofields.php:818
 #, php-format
 msgid "To save a property as a favorite, you must be login to your account."
-msgstr ""
+msgstr "즐겨 찾기로 호텔을 저장하려면, 귀하의 계정에 로그인해야합니다."
 
 #: ../code/application/views/helpfile/pofields.php:819
 #, php-format
@@ -8477,54 +8469,55 @@ msgid ""
 "By creating an account you will be able to save properties as favorites, get "
 "access to your bookings and ratings, and many more benefits."
 msgstr ""
+"계정을 만들면, 귀하가 원하는 호텔을 즐겨찾기에 저장할 수 있고,  예약과 평가"
+"를 할 수 있으며, 더 많은 혜택을 누릴 수 있습니다."
 
 #: ../code/application/views/helpfile/pofields.php:820
 #, php-format
 msgid "Please enter your email address and we will send you a password."
-msgstr ""
+msgstr "  귀하의 이메일 주소를 입력해주시면  암호를 보내 드리겠습니다."
 
 #: ../code/application/views/helpfile/pofields.php:821
-#, fuzzy, php-format
+#, php-format
 msgid "Saved favorite properties"
-msgstr "%s에 있는 더 많은 숙소 검색"
+msgstr "즐겨찾기에 호텔이 저장됨"
 
 #: ../code/application/views/helpfile/pofields.php:822
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit to be paid now (%d)"
-msgstr "지금 지불해야 하는 보증금 :"
+msgstr "지금 지불해야하는 보증금(%d)"
 
 #: ../code/application/views/helpfile/pofields.php:823
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d) is payable upon arrival. You will "
 "find the property's contact information (email, address, telephone number…) "
 "in your confirmation email after you have made your reservation."
 msgstr ""
-" 고객님의 예약승인을 위해 디파짓(총 금액의 10%%)을 결제 해주셔야 합니다. 남"
-"은 금액(90%%)는 도착후에 결제 가능하십니다. 고객님의 예약승인이 완료된후 보내"
-"드리는 확인 메일에서 숙소 정보(이메일, 주소, 전화번호 등..)을 확인 하실 수 있"
-"습니다. "
+" 지금, 예약을 확정하기 위한 보증금 (총 금액의 %d)을 지불해야합니다.나머지 금"
+"액 (%d)은  도착시 지불하시면 됩니다.  예약을 한 후, 확인 메일에서 호텔의 연락"
+"처 정보 (이메일, 주소, 전화 번호, ...)을 찾을 수 있습니다."
 
 #: ../code/application/views/helpfile/pofields.php:824
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit (%d)"
-msgstr "보증금 :"
+msgstr "보증금(%d)"
 
 #: ../code/application/views/helpfile/pofields.php:825
-#, fuzzy, php-format
+#, php-format
 msgid "Amount already paid:"
-msgstr "이미 지불한 보증금 :"
+msgstr "이미 지불한 금액:"
 
 #: ../code/application/views/helpfile/pofields.php:826
 #, php-format
 msgid "The most popular"
-msgstr ""
+msgstr "가장 인기있는 호텔"
 
 #: ../code/application/views/helpfile/pofields.php:827
-#, fuzzy, php-format
+#, php-format
 msgid "Most popular"
-msgstr "중요 사항 "
+msgstr "인기있는 호텔"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
