--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 09:15+0300\n"
-"PO-Revision-Date: 2013-04-23 21:07+0200\n"
+"PO-Revision-Date: 2013-04-27 00:17+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -1262,11 +1262,10 @@ msgstr ""
 "você mesmo como recordação."
 
 #: ../code/application/views/includes/template-share-email-popup.php:44
-#, fuzzy
 msgid "Mail this PDF quote to someone you know, or send it to yourself."
 msgstr ""
-"Envie essa página por e-mail para alguém que você conhece, ou envie para "
-"você mesmo como recordação."
+"Envie essa indicação por PDF para alguém  que você conheça ou envie-o para "
+"você mesmo."
 
 #: ../code/application/views/includes/template-share-email-popup.php:47
 #: ../code/application/views/helpfile/pofields.php:676
@@ -1300,11 +1299,12 @@ msgid "From (email)"
 msgstr "De (e-mail)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:73
-#, fuzzy
 msgid ""
 "Yes, I want to subscribe to the newsletter to get great deals. (You can "
 "unsubscribe anytime)"
-msgstr "Sim, eu quero subscrever à newsletter."
+msgstr ""
+"Sim, eu quero assinar a newsletter para obter grandes oportunidades. (Você "
+"pode cancelas a assinatura a qualquer momento)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:83
 #: ../code/application/views/helpfile/pofields.php:682
@@ -3151,9 +3151,8 @@ msgstr "Disponibilidade"
 #: ../code/application/views/property_rooms_avail.php:279
 #: ../code/application/views/hw/booking_avail_view.php:283
 #: ../code/application/views/hb/booking_avail_view.php:285
-#, fuzzy
 msgid "Dorm"
-msgstr "Dormitórios"
+msgstr "Dormitório"
 
 #: ../code/application/views/property_rooms_avail.php:279
 #: ../code/application/views/hw/booking_avail_view.php:283
@@ -3242,14 +3241,14 @@ msgid "1 guest in 1 Bedroom."
 msgstr "1 hóspede em 1 Quarto."
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guests in each room)."
-msgstr "%d hóspedes em %d Quartos (%d hóspedes em cada quarto)."
+msgstr "1 hóspedes em %d Quartos (%d hóspedes em cada quarto)."
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guest in each room)."
-msgstr "%d hóspedes em %d Quartos (%d hóspedes em cada quarto)."
+msgstr "1 hóspedes em %d Quartos (%d hóspedes em cada quarto)."
 
 #: ../code/application/views/property_rooms_avail.php:415
 #: ../code/application/views/hw/booking_avail_view.php:526
@@ -3275,7 +3274,7 @@ msgstr "%d hóspedes em %d Quartos (%d hóspedes em cada quarto)."
 #: ../code/application/views/property_rooms_avail.php:417
 #: ../code/application/views/hw/booking_avail_view.php:528
 #: ../code/application/views/hb/booking_avail_view.php:571
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (%d guest in each room)."
 msgstr "%d hóspedes em %d Quartos (%d hóspedes em cada quarto)."
 
@@ -4123,9 +4122,8 @@ msgid "Filter by Districts"
 msgstr "Filtrer par quartiers"
 
 #: ../code/application/views/city_view.php:20
-#, fuzzy
 msgid "Filter by Landmarks (within 2km)"
-msgstr "Pontos de referências (em 2km)"
+msgstr "Filtrar por Pontos de Referência (com até 2km)"
 
 #: ../code/application/views/city_view.php:81
 #: ../code/application/views/helpfile/pofields.php:440
@@ -4240,14 +4238,12 @@ msgid "Close Map"
 msgstr "Fechar o Mapa"
 
 #: ../code/application/views/city_view.php:257
-#, fuzzy
 msgid "Filter by Landmarks"
-msgstr "Filtrer par attractions (-2kms)"
+msgstr "Filtrar por Pontos de Referência"
 
 #: ../code/application/views/city_view.php:261
-#, fuzzy
 msgid "Filter by Districts or Landmarks"
-msgstr "Filtrer par quartiers"
+msgstr "Filtrar por Estados ou Pontos de Referência"
 
 #: ../code/application/views/city_view.php:290
 #: ../code/application/views/helpfile/pofields.php:649
@@ -4521,9 +4517,9 @@ msgstr ""
 #: ../code/application/views/hw/booking_avail_view.php:231
 #: ../code/application/views/hw/booking_avail_view.php:502
 #: ../code/application/views/hb/booking_avail_view.php:289
-#, fuzzy, php-format
+#, php-format
 msgid "Dorm Availability"
-msgstr "Disponibilidade"
+msgstr "Disponibilidade do Dormitório"
 
 #: ../code/application/views/hw/booking_avail_view.php:231
 #: ../code/application/views/hb/booking_avail_view.php:289
@@ -4606,7 +4602,7 @@ msgid "Bedrooms you will occupy:"
 msgstr "Quartos que você irá ocupar:"
 
 #: ../code/application/views/hw/booking_avail_view.php:526
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedroom (1 guest in each room)."
 msgstr "%d hóspedes em %d Quarto (1 convidado em cada quarto)."
 
@@ -4622,7 +4618,7 @@ msgstr ""
 
 #: ../code/application/views/hw/booking_avail_view.php:591
 #: ../code/application/views/hb/booking_avail_view.php:518
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (1 guest in each room)."
 msgstr "%d hóspedes em %d Quarto (1 convidado em cada quarto)."
 
@@ -4687,9 +4683,8 @@ msgstr ""
 
 #: ../code/application/views/hw/booking_avail_view.php:749
 #: ../code/application/views/hb/booking_avail_view.php:719
-#, fuzzy
 msgid "Number of guests selected"
-msgstr "Número total de hóspedes selecionados"
+msgstr "Número de hóspedes selecionados"
 
 #: ../code/application/views/hw/booking_avail_view.php:769
 #: ../code/application/views/hb/booking_avail_view.php:737
@@ -8539,17 +8534,17 @@ msgid "The deposit is non refundable and non transferable."
 msgstr "O depósito não é reembolsável e não é transferível."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property's "
 "contact information (email, address, telephone number…) in your confirmation "
 "email after you have made your reservation."
 msgstr ""
-" Agora você só paga um depósito (10%% do valor total) para confirmar e "
-"garantir sua reserva. O restante (90%%) será pago na chegada. Encontrará "
-"informações sobre o estabalecimento escolhido (endereço de email, número de "
-"telefone ...) no e-mail de confirmação depois de ter efetuado sua reserva."
+"Você realiza o depósito para confirmar a assegurar a sua reserva. O valor "
+"que remanescente pode ser pago na sua chegada. Você irá encontrar as "
+"informações de contato do proprietário (email, endereço, número de "
+"telefone…) no seu e-mail de confirmação após ter feito a reserva."
 
 #: ../code/application/views/helpfile/pofields.php:800
 #, php-format
@@ -8557,82 +8552,86 @@ msgid ""
 "By clicking \"Create Account\" you confirm that you accept the Terms of "
 "Service and Privacy Policy."
 msgstr ""
+"Clicando em \"Criar Conta\" você confirma que aceitou os Termos de "
+"Utilização e a Política de Privacidade"
 
 #: ../code/application/views/helpfile/pofields.php:801
-#, fuzzy, php-format
+#, php-format
 msgid "Create account"
-msgstr "Check out tardio"
+msgstr "Criar conta"
 
 #: ../code/application/views/helpfile/pofields.php:802
 #, php-format
 msgid "Tell me about great deals and exclusive discounts!"
-msgstr ""
+msgstr "Me avisar sobre grandes oportunidades e descontos exclusivos!"
 
 #: ../code/application/views/helpfile/pofields.php:803
-#, fuzzy, php-format
+#, php-format
 msgid "Save this property as a favorite"
-msgstr "Classifique esta propriedade"
+msgstr "Salvar essa propriedade como favorito"
 
 #: ../code/application/views/helpfile/pofields.php:804
 #, php-format
 msgid ""
 "We will never sell your personal information - You can unsubscribe anytime."
 msgstr ""
+"Nós nunca iremos vender suas informações pessoais - Você pode cancelar a "
+"assinatura a qualquer momento."
 
 #: ../code/application/views/helpfile/pofields.php:805
 #, php-format
 msgid "Your private notes (optional)"
-msgstr ""
+msgstr "Suas notas pessoais (opcional)"
 
 #: ../code/application/views/helpfile/pofields.php:806
 #, php-format
 msgid "Characters left:"
-msgstr ""
+msgstr "Caracteres faltantes:"
 
 #: ../code/application/views/helpfile/pofields.php:807
-#, fuzzy, php-format
+#, php-format
 msgid "Update Notes"
-msgstr "Aviso Importante"
+msgstr "Atualizar Notas"
 
 #: ../code/application/views/helpfile/pofields.php:808
-#, fuzzy, php-format
+#, php-format
 msgid "Remove from my favorites"
-msgstr "Remover desta pesquisa"
+msgstr "Remover dos meus favoritos"
 
 #: ../code/application/views/helpfile/pofields.php:809
 #, php-format
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #: ../code/application/views/helpfile/pofields.php:810
 #, php-format
 msgid "My favorite properties"
-msgstr ""
+msgstr "Minhas propriedades favoritas"
 
 #: ../code/application/views/helpfile/pofields.php:811
 #, php-format
 msgid "List of favorite properties"
-msgstr ""
+msgstr "Lista de propriedades favoritas"
 
 #: ../code/application/views/helpfile/pofields.php:812
 #, php-format
 msgid "My short notes about the property"
-msgstr ""
+msgstr "Minhas notas curtas sobre a propriedade"
 
 #: ../code/application/views/helpfile/pofields.php:813
-#, fuzzy, php-format
+#, php-format
 msgid "Edit or remove"
-msgstr "Remover"
+msgstr "Editar ou remover"
 
 #: ../code/application/views/helpfile/pofields.php:814
-#, fuzzy, php-format
+#, php-format
 msgid "Saved to my favorites"
-msgstr "Ver favoritos"
+msgstr "Salvar nos meus favoritos"
 
 #: ../code/application/views/helpfile/pofields.php:815
-#, fuzzy, php-format
+#, php-format
 msgid "Add to my favorites"
-msgstr "Adicionar aos favoritos"
+msgstr "Adicionar aos meus favoritos"
 
 #: ../code/application/views/helpfile/pofields.php:816
 #, php-format
@@ -8640,16 +8639,19 @@ msgid ""
 "You can save this property as a favorite in your account so you can easily "
 "book it at a later date if you wish."
 msgstr ""
+"Você pode salvar essa propriedade como um favorito na sua conta, assim você "
+"pode facilmente agendar em uma data futura se você quiser."
 
 #: ../code/application/views/helpfile/pofields.php:817
 #, php-format
 msgid "Account created"
-msgstr ""
+msgstr "Conta criada"
 
 #: ../code/application/views/helpfile/pofields.php:818
 #, php-format
 msgid "To save a property as a favorite, you must be login to your account."
 msgstr ""
+"Para salvar essa propriedade como favorito, você deve logar na sua conta."
 
 #: ../code/application/views/helpfile/pofields.php:819
 #, php-format
@@ -8657,54 +8659,57 @@ msgid ""
 "By creating an account you will be able to save properties as favorites, get "
 "access to your bookings and ratings, and many more benefits."
 msgstr ""
+"Criando uma conta você poderá salvar propriedades como favorito, acessar "
+"seus agendamentos e classificações e muitos outros benefícios."
 
 #: ../code/application/views/helpfile/pofields.php:820
 #, php-format
 msgid "Please enter your email address and we will send you a password."
 msgstr ""
+"Por favor insira seu endereço de e-mail que nós te encaminharemos uma senha."
 
 #: ../code/application/views/helpfile/pofields.php:821
-#, fuzzy, php-format
+#, php-format
 msgid "Saved favorite properties"
-msgstr "Procure por mais locais em %s"
+msgstr "Salvar propriedades favoritas"
 
 #: ../code/application/views/helpfile/pofields.php:822
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit to be paid now (%d)"
-msgstr "Depósito a ser pago agora:"
+msgstr "Depósito a ser pago agora (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:823
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit (%d of total amount) to confirm and secure your "
 "reservation now. The remaining amount (%d) is payable upon arrival. You will "
 "find the property's contact information (email, address, telephone number…) "
 "in your confirmation email after you have made your reservation."
 msgstr ""
-" Agora você só paga um depósito (10%% do valor total) para confirmar e "
-"garantir sua reserva. O restante (90%%) será pago na chegada. Encontrará "
-"informações sobre o estabalecimento escolhido (endereço de email, número de "
-"telefone ...) no e-mail de confirmação depois de ter efetuado sua reserva."
+"Você apenas faz o depósito (%d do valor total) para confirmar e assegurar a "
+"sua reserva agora. O valor restante (%d) é pago na chegada. Você irá "
+"encontrar informações de contato do proprietário (e-mail, endereço, número "
+"de telefone…) no seu e-mail de confirmação depois de ter feito a sua reserva."
 
 #: ../code/application/views/helpfile/pofields.php:824
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit (%d)"
-msgstr "Depósito:"
+msgstr "Depósito (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:825
-#, fuzzy, php-format
+#, php-format
 msgid "Amount already paid:"
-msgstr "Depósito já realizado:"
+msgstr "Valor já pago:"
 
 #: ../code/application/views/helpfile/pofields.php:826
 #, php-format
 msgid "The most popular"
-msgstr ""
+msgstr "O mais popular"
 
 #: ../code/application/views/helpfile/pofields.php:827
-#, fuzzy, php-format
+#, php-format
 msgid "Most popular"
-msgstr "Mais Importante"
+msgstr "Os mais populares"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
