--- a/languages/ci/locale/pt_PT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pt_PT/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 09:15+0300\n"
-"PO-Revision-Date: 2013-04-03 13:45+0200\n"
+"PO-Revision-Date: 2013-04-27 00:24+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -354,7 +354,7 @@ msgstr "Imprimir agora"
 #: ../code/application/views/helpfile/pofields.php:634
 #, php-format
 msgid "Quick Compare"
-msgstr ""
+msgstr "Comparação rápida"
 
 #: ../code/application/views/compare_property.php:186
 #: ../code/application/views/helpfile/pofields.php:635
@@ -396,7 +396,7 @@ msgstr "Funcionários"
 #: ../code/application/views/helpfile/pofields.php:640
 #, php-format
 msgid "Site"
-msgstr ""
+msgstr "Local"
 
 #: ../code/application/views/compare_property.php:216
 #: ../code/application/views/property_detail.php:567
@@ -410,7 +410,7 @@ msgstr "Limpeza"
 #: ../code/application/views/helpfile/pofields.php:642
 #, php-format
 msgid "Services"
-msgstr ""
+msgstr "Serviços"
 
 #: ../code/application/views/compare_property.php:226
 #: ../code/application/views/property_detail.php:573
@@ -447,7 +447,7 @@ msgstr "Instalações e Serviços"
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
 msgid "Show More"
-msgstr ""
+msgstr "Mostrar mais"
 
 #: ../code/application/views/compare_property.php:350
 #: ../code/application/views/compare_property.php:353
@@ -1215,7 +1215,7 @@ msgstr "Um email foi enviado para seu endereço."
 #: ../code/application/views/helpfile/pofields.php:669
 #, php-format
 msgid "From:"
-msgstr ""
+msgstr "De:"
 
 #: ../code/application/views/includes/template-share-email-popup.php:21
 #: ../code/application/views/helpfile/pofields.php:670
@@ -1227,7 +1227,7 @@ msgstr "Total:"
 #: ../code/application/views/helpfile/pofields.php:671
 #, php-format
 msgid "Subject:"
-msgstr ""
+msgstr "Assunto:"
 
 #: ../code/application/views/includes/template-share-email-popup.php:29
 #: ../code/application/views/helpfile/pofields.php:672
@@ -1239,7 +1239,7 @@ msgstr "Mensagem"
 #: ../code/application/views/helpfile/pofields.php:673
 #, php-format
 msgid "Send another message"
-msgstr ""
+msgstr "Enviar outra mensagem"
 
 #: ../code/application/views/includes/template-share-email-popup.php:38
 #: ../code/application/views/includes/template-share-email-popup.php:86
@@ -1258,22 +1258,26 @@ msgstr "Fechar"
 msgid ""
 "Mail this page to someone you know, or send it to yourself as a reminder."
 msgstr ""
+"Envie essa página por e-mail para alguém que você conhece, ou envie para "
+"você mesmo como recordação."
 
 #: ../code/application/views/includes/template-share-email-popup.php:44
 msgid "Mail this PDF quote to someone you know, or send it to yourself."
 msgstr ""
+"Envie essa indicação por PDF para alguém  que você conheça ou envie-o para "
+"você mesmo."
 
 #: ../code/application/views/includes/template-share-email-popup.php:47
 #: ../code/application/views/helpfile/pofields.php:676
 #, php-format
 msgid "To (email)"
-msgstr ""
+msgstr "Para (e-mail)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:52
 #: ../code/application/views/helpfile/pofields.php:677
 #, php-format
 msgid "Subject"
-msgstr ""
+msgstr "Assunto"
 
 #: ../code/application/views/includes/template-share-email-popup.php:57
 #: ../code/application/views/helpfile/pofields.php:85
@@ -1292,13 +1296,15 @@ msgstr "Primeiro nome"
 #: ../code/application/views/helpfile/pofields.php:680
 #, php-format
 msgid "From (email)"
-msgstr ""
+msgstr "De (e-mail)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:73
 msgid ""
 "Yes, I want to subscribe to the newsletter to get great deals. (You can "
 "unsubscribe anytime)"
 msgstr ""
+"Sim, eu quero assinar a newsletter para obter grandes oportunidades. (Você "
+"pode cancelas a assinatura a qualquer momento)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:83
 #: ../code/application/views/helpfile/pofields.php:682
@@ -1313,13 +1319,13 @@ msgstr "Enviar"
 
 #: ../code/application/views/includes/template-share-email-popup.php:85
 msgid "Please wait ..."
-msgstr ""
+msgstr "Por favor aguarde…"
 
 #: ../code/application/views/includes/template-share-email-popup.php:90
 #: ../code/application/views/helpfile/pofields.php:684
 #, php-format
 msgid "Share PDF"
-msgstr ""
+msgstr "Compartilhar PDF"
 
 # meta keywords for SEO
 #: ../code/application/views/includes/header.php:13
@@ -2778,7 +2784,7 @@ msgstr "Estacionamento disponível"
 #: ../code/application/views/helpfile/pofields.php:766
 #, php-format
 msgid "Show fully available only"
-msgstr ""
+msgstr "Mostrar apenas os totalmente disponíveis"
 
 #: ../code/application/views/property_rooms_avail.php:15
 #: ../code/application/views/hw/booking_avail_view.php:29
@@ -2789,6 +2795,9 @@ msgid ""
 "dates. You can select this filter to only see rooms with full availability "
 "for your stay."
 msgstr ""
+"Nós estamos mostrando quartos com disponibilidade total e parcial nas datas "
+"escolhidas. Você pode selecionar esse filtro para ver apenas os quartos com "
+"total disponibilidade para a sua estadia."
 
 #: ../code/application/views/property_rooms_avail.php:107
 #: ../code/application/views/hw/booking_avail_view.php:641
@@ -2796,7 +2805,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:697
 #, php-format
 msgid "Type of dorms"
-msgstr ""
+msgstr "Tipo de dormitórios"
 
 #: ../code/application/views/property_rooms_avail.php:107
 #: ../code/application/views/property_detail.php:236
@@ -2827,7 +2836,7 @@ msgstr "Nós agradecemos por sua reserva do grupo."
 #: ../code/application/views/helpfile/pofields.php:699
 #, php-format
 msgid "Complete dorm only"
-msgstr ""
+msgstr "Apenas dormitórios completos"
 
 #: ../code/application/views/property_rooms_avail.php:117
 #: ../code/application/views/hw/booking_avail_view.php:651
@@ -2839,6 +2848,10 @@ msgid ""
 "the beds in that particular dorm even if you do not need all of them. This "
 "is often used by groups."
 msgstr ""
+"Nós iremos te mostrar apenas os dormitórios que você certamente poderá "
+"reservar. Você precisará pegar todas as camas nesse dormitório em especial "
+"mesmo que você não precise de todas elas. Essa opção é usada algumas vezes "
+"por grupos."
 
 #: ../code/application/views/property_rooms_avail.php:123
 #: ../code/application/views/property_rooms_avail.php:327
@@ -2860,7 +2873,7 @@ msgstr "Preço por quarto (não por pessoa)"
 #: ../code/application/views/helpfile/pofields.php:702
 #, php-format
 msgid "Average Price"
-msgstr ""
+msgstr "Preço médio"
 
 #: ../code/application/views/property_rooms_avail.php:123
 #: ../code/application/views/property_rooms_avail.php:327
@@ -2903,7 +2916,7 @@ msgstr "Preço"
 #: ../code/application/views/helpfile/pofields.php:705
 #, php-format
 msgid "Maximum"
-msgstr ""
+msgstr "Máximo"
 
 #: ../code/application/views/property_rooms_avail.php:177
 #: ../code/application/views/property_rooms_avail.php:287
@@ -2932,7 +2945,7 @@ msgstr "Não há dormitórios disponíveis"
 #: ../code/application/views/helpfile/pofields.php:759
 #, php-format
 msgid "Lowest night:"
-msgstr ""
+msgstr "Preço mais baixo por noite:"
 
 #: ../code/application/views/property_rooms_avail.php:198
 #: ../code/application/views/property_rooms_avail.php:200
@@ -2960,7 +2973,7 @@ msgstr "Preço por cama (não por quarto)"
 #: ../code/application/views/helpfile/pofields.php:732
 #, php-format
 msgid "1 fully available dorm."
-msgstr ""
+msgstr "1 dormitório completo disponível."
 
 #: ../code/application/views/property_rooms_avail.php:213
 #: ../code/application/views/hw/booking_avail_view.php:248
@@ -2968,7 +2981,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:733
 #, php-format
 msgid "%d fully available dorms."
-msgstr ""
+msgstr "%d dormitórios completos disponíveis."
 
 #: ../code/application/views/property_rooms_avail.php:217
 #: ../code/application/views/hw/booking_avail_view.php:252
@@ -2979,6 +2992,8 @@ msgid ""
 "1 fully available dorm and 1 already partially occupied (beds already "
 "occupied: %d)."
 msgstr ""
+"1 dormitório completo disponível e 1 parcialmente ocupado (camas já ocupadas:"
+"%d)."
 
 #: ../code/application/views/property_rooms_avail.php:219
 #: ../code/application/views/hw/booking_avail_view.php:254
@@ -2986,7 +3001,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:735
 #, php-format
 msgid "This dorm is already partially occupied (beds already occupied: %d)."
-msgstr ""
+msgstr "Este dormitório está parcialmente ocupado (camas já ocupadas:%d)."
 
 #: ../code/application/views/property_rooms_avail.php:221
 #: ../code/application/views/hw/booking_avail_view.php:256
@@ -2997,6 +3012,8 @@ msgid ""
 "%d dorms fully available and 1 dorm already partially occupied (beds already "
 "occupied: %d)."
 msgstr ""
+"%d dormitórios completos disponíveis e 1 dormitório já está parcialmente "
+"ocupado (camas já ocupadas:%d)."
 
 #: ../code/application/views/property_rooms_avail.php:238
 #: ../code/application/views/property_rooms_avail.php:438
@@ -3050,6 +3067,7 @@ msgstr "Café da manhã incluído"
 #, php-format
 msgid "This type of dorm can accommodate up to 1 guest per dorm."
 msgstr ""
+"Esse tipo de dormitório pode acomodar mais de 1 hóspede por dormitório."
 
 #: ../code/application/views/property_rooms_avail.php:253
 #: ../code/application/views/hw/booking_avail_view.php:226
@@ -3060,6 +3078,7 @@ msgstr ""
 #, php-format
 msgid "This type of dorm can accommodate up to %d guests per dorm."
 msgstr ""
+"Esse tipo de dormitório pode acomodar mais de %d hóspedes por dormitório."
 
 #: ../code/application/views/property_rooms_avail.php:275
 #: ../code/application/views/property_rooms_avail.php:477
@@ -3229,12 +3248,12 @@ msgstr "Número máximo de pessoas neste quarto"
 #: ../code/application/views/property_rooms_avail.php:413
 #, php-format
 msgid "1 guest in %d Bedrooms (%d guests in each room)."
-msgstr ""
+msgstr "1 hóspedes em %d Quartos (%d hóspedes em cada quarto)."
 
 #: ../code/application/views/property_rooms_avail.php:413
 #, php-format
 msgid "1 guest in %d Bedrooms (%d guest in each room)."
-msgstr ""
+msgstr "1 hóspedes em %d Quartos (%d hóspedes em cada quarto)."
 
 #: ../code/application/views/property_rooms_avail.php:415
 #: ../code/application/views/hw/booking_avail_view.php:526
@@ -3255,7 +3274,7 @@ msgstr "Número máximo de pessoas neste quarto"
 #: ../code/application/views/helpfile/pofields.php:713
 #, php-format
 msgid "%d guests in %d Bedrooms (%d guests in each room)."
-msgstr ""
+msgstr "%d hóspedes em %d Quartos (%d hóspedes em cada quarto)."
 
 #: ../code/application/views/property_rooms_avail.php:417
 #: ../code/application/views/hw/booking_avail_view.php:528
@@ -3272,7 +3291,7 @@ msgstr "Número máximo de pessoas neste quarto"
 #: ../code/application/views/helpfile/pofields.php:751
 #, php-format
 msgid "This type of bedroom can accommodate up to 1 guest per room."
-msgstr ""
+msgstr "Esse tipo de quarto pode acomodar mais de 1 hóspede por dormitório."
 
 #: ../code/application/views/property_rooms_avail.php:453
 #: ../code/application/views/hw/booking_avail_view.php:497
@@ -3282,7 +3301,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:752
 #, php-format
 msgid "This type of bedroom can accommodate up to %d guests per room."
-msgstr ""
+msgstr "Esse tipo de quarto pode acomodar mais de %d hóspedes por dormitório."
 
 #: ../code/application/views/property_rooms_avail.php:481
 #: ../code/application/views/hw/booking_avail_view.php:553
